[package]
name = "jwt"
version = "0.1.0"
authors = ["Michael F. Collins, III <mfcollins3@me.com>"]
edition = "2021"
description = "Tools that developers can use to build software solutions that use JSON web tokens"
documentation = "https://mfcollins3.github.io/jwt-developer-tools/docs"
readme = "README.md"
homepage = "https://mfcollins3.github.com/jwt-developer-tools"
repository = "https://github.com/mfcollins3/jwt-developer-tools"
license = "MIT"
keywords = ["api", "authorization", "cryptography", "jwt", "security"]
categories = ["command-line-utilities", "development-tools::testing"]
publish = false

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
regex = "1.10.6"
tempfile = "3.12.0"
